fix(priority): Добавлен повышенный приоритет для деплойментов с одним подом

--- a/kubernetes/databases/minio.yaml
+++ b/kubernetes/databases/minio.yaml
@@ -44,6 +44,7 @@ spec:
       labels:
         app: minio
     spec:
+      priorityClassName: "high-priority"
       containers:
         - name: minio
           image: minio/minio:latest
