--- a/kubernetes/databases/postgresql.yaml
+++ b/kubernetes/databases/postgresql.yaml
@@ -42,6 +42,7 @@ spec:
       labels:
         app: postgresql
     spec:
+      priorityClassName: "high-priority"
       containers:
         - name: postgresql
           image: postgres:15
