--- a/kubernetes/backend/gateway-service.yaml
+++ b/kubernetes/backend/gateway-service.yaml
@@ -7,7 +7,7 @@ spec:
     - port: 8765
       name: gateway-service
 
-  type: ClusterIP
+  type: LoadBalancer
   selector:
     app: gateway-service
 
@@ -57,11 +57,11 @@ spec:
               value: "http://discovery-service:8761/eureka/"
           resources:
             requests:
-              memory: "400Mi"
+              memory: "700Mi"
               cpu: "250m"
             limits:
-              memory: "800Mi"
-              cpu: "1"
+              memory: "1200Mi"
+              cpu: "700"
           livenessProbe:
             httpGet:
               path: /actuator/health
