--- a/kubernetes/databases/postgresql.yaml
+++ b/kubernetes/databases/postgresql.yaml
@@ -66,10 +66,10 @@ spec:
 
           resources:
             requests:
-              memory: "1Gi"
-              cpu: "500m"
+              memory: "300Mi"
+              cpu: "250m"
             limits:
-              memory: "2Gi"
+              memory: "1Gi"
               cpu: "1"
 
   volumeClaimTemplates:
