--- a/kubernetes/backend/discovery-service.yaml
+++ b/kubernetes/backend/discovery-service.yaml
@@ -34,7 +34,7 @@ spec:
       containers:
         - name: discovery-service
           image: jubastik/29_backend_t1
-          command: [ "java", "-jar", "/app/discovery-service.jar" ]
+          command: [ "java", "-jar", "-Xms256m","-Xmx512m", "/app/discovery-service.jar" ]
           ports:
             - containerPort: 8761
           env:
@@ -56,11 +56,11 @@ spec:
               value: "http://discovery-service:8761/eureka/"
           resources:
             requests:
-              memory: "400Mi"
+              memory: "450Mi"
               cpu: "250m"
             limits:
-              memory: "800Mi"
-              cpu: "1"
+              memory: "600Mi"
+              cpu: "1.5"
           livenessProbe:
             httpGet:
               path: /actuator/health
