--- a/kubernetes/backend/cart-service.yaml
+++ b/kubernetes/backend/cart-service.yaml
@@ -30,6 +30,17 @@ spec:
       labels:
         app: cart-service
     spec:
+      initContainers:
+        - name: wait-for
+          image: busybox
+          command:
+            - sh
+            - -c
+            - |
+              while ! nc -z discovery-service 8761; do
+                echo "Ожидание discovery-service на порту 8761..."
+                sleep 5
+              done
       containers:
         - name: cart-service
           image: jubastik/29_backend_t1
