--- a/kubernetes/backend/gateway-service.yaml
+++ b/kubernetes/backend/gateway-service.yaml
@@ -31,6 +31,17 @@ spec:
         app: gateway-service
     spec:
       priorityClassName: "high-priority"
+      initContainers:
+        - name: wait-for
+          image: busybox
+          command:
+            - sh
+            - -c
+            - |
+              while ! nc -z discovery-service 8761; do
+                echo "Ожидание discovery-service на порту 8761..."
+                sleep 5
+              done
       containers:
         - name: gateway-service
           image: jubastik/29_backend_t1
